PWARE-89 Remove usages of TeamService pertaining to Org teams (#69)
* PWARE-89 Remove usages of TeamService pertaining to Org teams

* Remove unused test

* Remove from test harness

* Fix test